--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ packages = [
 python = "^3.8"
 Django = "^4.0.3"
 gunicorn = "^20.1.0"
+python-dotenv = "^0.20.0"
+django-bootstrap4 = "^22.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
