--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dj-database-url = "^0.5.0"
 flake8 = "^4.0.1"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
+psycopg2-binary = "^2.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
