--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^0.20.0"
 django-bootstrap4 = "^22.1"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.9.3"
+whitenoise = "^6.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
