--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ whitenoise = "^6.0.0"
 flake8 = "^4.0.1"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
+Faker = "^13.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
