--- a/fixtures/tasks.json
+++ b/fixtures/tasks.json
@@ -6,12 +6,8 @@
         "name": "janedoe task to self",
         "description": "this is task to self",
         "status": 1,
-        "created_by": [
-            "janedoe"
-        ],
-        "executive": [
-            "janedoe"
-        ],
+        "created_by": 2,
+        "executive": 2,
         "created_at": "2022-05-11T12:58:12.603Z",
         "modified_at": "2022-05-11T12:58:55.945Z"
     }
@@ -23,12 +19,8 @@
         "name": "janedoe task to jsmith",
         "description": "task to jsmith",
         "status": 1,
-        "created_by": [
-            "janedoe"
-        ],
-        "executive": [
-            "jsmith"
-        ],
+        "created_by": 2,
+        "executive": 1,
         "created_at": "2022-05-11T12:58:48.348Z",
         "modified_at": "2022-05-11T12:58:48.348Z"
     }
