--- a/fixtures/tasks.json
+++ b/fixtures/tasks.json
@@ -8,8 +8,8 @@
         "status": 1,
         "created_by": 2,
         "executive": 2,
-        "created_at": "2022-05-11T12:58:12.603Z",
-        "modified_at": "2022-05-11T12:58:55.945Z"
+        "created_at": "2022-05-16T16:15:51.814Z",
+        "modified_at": "2022-05-16T16:16:12.150Z"
     }
 },
 {
@@ -21,8 +21,21 @@
         "status": 1,
         "created_by": 2,
         "executive": 1,
-        "created_at": "2022-05-11T12:58:48.348Z",
-        "modified_at": "2022-05-11T12:58:48.348Z"
+        "created_at": "2022-05-16T16:52:47.784Z",
+        "modified_at": "2022-05-16T16:52:47.785Z"
+    }
+},
+{
+    "model": "tasks.task",
+    "pk": 4,
+    "fields": {
+        "name": "jsmith's task to qwerty",
+        "description": "task to qwerty",
+        "status": 2,
+        "created_by": 1,
+        "executive": 3,
+        "created_at": "2022-05-18T10:45:35.652Z",
+        "modified_at": "2022-05-18T10:45:35.652Z"
     }
 }
 ]
