--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ venv.bak/
 
 # Exclude collected Django static files
 static_collected
-staticfiles/
+staticfiles/*
 
 # Exclude machine-specific vs code settings
 .vscode/*
