--- a/fixtures/tasks.json
+++ b/fixtures/tasks.json
@@ -7,7 +7,7 @@
         "description": "this is task to self",
         "status": 1,
         "created_by": 2,
-        "executive": 2,
+        "executor": 2,
         "created_at": "2022-05-16T16:15:51.814Z",
         "modified_at": "2022-05-16T16:16:12.150Z"
     }
@@ -20,7 +20,7 @@
         "description": "task to jsmith",
         "status": 1,
         "created_by": 2,
-        "executive": 1,
+        "executor": 1,
         "created_at": "2022-05-16T16:52:47.784Z",
         "modified_at": "2022-05-16T16:52:47.785Z"
     }
@@ -33,7 +33,7 @@
         "description": "task to qwerty",
         "status": 2,
         "created_by": 1,
-        "executive": 3,
+        "executor": 3,
         "created_at": "2022-05-18T10:45:35.652Z",
         "modified_at": "2022-05-18T10:45:35.652Z"
     }
